@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2004/11/01 21:50:40 jdolecek Exp $
+
+SHA1 (SOAP-0.7.5.tgz) = 93723ae6f05e4c8bab35fa873fcba570493b4c3e
+Size (SOAP-0.7.5.tgz) = 74913 bytes
